--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <commons.lang.version>3.3.4</commons.lang.version>
         <junit.version>4.11</junit.version>
         <scalatest.version>2.2.1</scalatest.version>
+        <spark.version>1.6.0-cdh5.7.2</spark.version>
     </properties>
 
     <build>
@@ -126,6 +127,19 @@
             <artifactId>scalatest_2.10</artifactId>
             <version>${scalatest.version}</version>
             <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-core_2.10</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.spark</groupId>
+            <artifactId>spark-sql_2.10</artifactId>
+            <version>${spark.version}</version>
+            <scope>provided</scope>
         </dependency>
 
         <dependency>
